--- a/libdocument/ev-document-type-builtins.h.template
+++ b/libdocument/ev-document-type-builtins.h.template
@@ -1,7 +1,7 @@
 /*** BEGIN file-header ***/
 
-#if !defined (__EV_XREADER_DOCUMENT_H_INSIDE__) && !defined (XREADER_COMPILATION)
-#error "Only <xreader-document.h> can be included directly."
+#if !defined (__EV_EVINCE_DOCUMENT_H_INSIDE__) && !defined (EVINCE_COMPILATION)
+#error "Only <evince-document.h> can be included directly."
 #endif
 
 #ifndef EV_DOCUMENT_TYPE_BUILTINS_H
