Add xapp common library as dependency

--- a/debian/control
+++ b/debian/control
@@ -21,6 +21,7 @@ Build-Depends: debhelper (>= 9),
                libspectre-dev,
                libtiff-dev,
                libwebkit2gtk-3.0-dev (>= 2.4.3) | libwebkit2gtk-4.0-dev (>= 2.4.3),
+               libxapp-dev,
                libx11-dev,
                libxml2-dev,
                lsb-release,
