--- a/configure.ac
+++ b/configure.ac
@@ -141,8 +141,14 @@ PKG_CHECK_MODULES(LIBVIEW, gtk+-3.0 >= $GTK_REQUIRED gail$GAIL_API_VERSION >= $G
 PKG_CHECK_MODULES(BACKEND, cairo >= $CAIRO_REQUIRED gtk+-3.0 >= $GTK_REQUIRED)
 PKG_CHECK_MODULES(FRONTEND_CORE, gtk+-3.0 >= $GTK_REQUIRED gthread-2.0 gio-2.0 >= $GLIB_REQUIRED)
 PKG_CHECK_MODULES(GMODULE, gmodule-2.0 >= $GLIB_REQUIRED)
-
-PKG_CHECK_MODULES([SHELL_CORE],[libxml-2.0 >= $LIBXML_REQUIRED gtk+-3.0 >= $GTK_REQUIRED gio-2.0 >= $GLIB_REQUIRED gthread-2.0 x11])
+PKG_CHECK_MODULES(SHELL_CORE, [
+	libxml-2.0 >= $LIBXML_REQUIRED
+	gtk+-3.0 >= $GTK_REQUIRED
+	gio-2.0 >= $GLIB_REQUIRED
+	gthread-2.0
+	x11
+	xapp
+])
 
 dnl
 dnl zlib support
