--- a/cut-n-paste/meson.build
+++ b/cut-n-paste/meson.build
@@ -2,6 +2,8 @@ subdir('zoom-control')
 subdir('totem-screensaver')
 subdir('smclient')
 subdir('synctex')
+subdir('gepub')
 
+epub_includes = include_directories('gepub')
 cnc_includes = include_directories('zoom-control', 'totem-screensaver', 'smclient')
 synctex_includes = include_directories('synctex')
